--- a/App Servicio/css/styles.css
+++ b/App Servicio/css/styles.css
@@ -183,5 +183,9 @@ img{
 .box-area {
 	width: 75%;
 }
-
+.resumen{
+    background-color:var(--verdeGris);
+    width: 100%;
+    height: 30rem;
+}
 /*  MAIN    */
