--- a/App Servicio/css/styles.css
+++ b/App Servicio/css/styles.css
@@ -184,27 +184,33 @@ img{
     background-color:var(--verdeGris);
     width: 100%;
     height: 30rem;
-}
-/*  MAIN    */
-
-
-/* Estadisticas*/
-
-.stat .stat_local{
-    width: 80%;
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-around;
-    border-style: solid ;
-    padding: 3rem;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    min-width: 108rem;
+    
 }
-
-.stat .stat_local .grafico{
-    padding: 1.5rem;
-    max-width: 40rem;
+.stat{
+    width: 100%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
-
+.stat .grafico{
+    padding: 5%;
+}
+.grafico canvas{
+    width: 50%;
+}
+.descargar{
+    text-align: right;
+}
+.descargar .btn_descargar{
+    margin-right: 2.5%;
+    background-color: var(--gris);
+    border:none;
+    padding: 4px;
+    border-radius: 15px;
+    font-size: 14px;
+    margin-bottom: 5rem;
+    color: black;
+}
