--- a/App Servicio/css/styles.css
+++ b/App Servicio/css/styles.css
@@ -75,6 +75,26 @@ img{
     display: flex;
     align-items: center;
 }
+
+.ElementoPrimero .Contenedor-logo{
+    display: flex;
+    align-items: center;
+}
+
+.ElementoPrimero .Contenedor-logo h1{
+    text-decoration: dashed;
+}
+
+.BElementoPrimero .Contenedor-logo .logo{
+    color: black;
+    display: flex;
+    height: 5rem;
+    width: 100%;
+    align-items: center;
+}
+
+
+
 .BarraLateral .Contenedor-logo .logo{
     color: black;
     display: flex;
@@ -152,6 +172,8 @@ img{
 .Contenedor-logo .nombre-logo{
     font-size: 2.5rem;
     font-weight: 500;
+    
+    
 }
 
 .wrapper {
@@ -187,7 +209,6 @@ img{
 
 .resumen{
     background-color:var(--verdeGris);
-    width: 100%;
     height: 30rem;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -220,6 +241,13 @@ img{
     width: 100%;
     border-collapse: collapse;
 }
+
+.resumen_global canvas{
+    margin-top: -11rem;
+    width: 20%;
+    
+}
+
 .resumen_global table th,td{
     padding: 1rem;
 }
@@ -244,8 +272,15 @@ img{
     width: 50%;
 }
 .descargar{
+    margin-top: 2rem;
     text-align: right;
+    height: 0.1rem;
 }
+
+.descargar h3{
+    color: #fff;
+}
+
 .descargar .btn_descargar{
     margin-right: 2.5%;
     background-color: var(--gris);
